tests/reference/asr-test_set_object2-41401ff.stderr
semantic error: unhashable type: 'dict'
 --> tests/errors/test_set_object2.py:4:36
  |
4 |     my_set: set[dict[i32, str]] = {{1: "a", 2: "b"}, {3: "c", 4: "d"}}
  |                                    ^^^^^^^^^^^^^^^^ 
